# BlackGEM_tiling

./: .gitattributes  .gitignore  MANIFEST.in  README.md  __init__.py  setup.cfg  setup.py
BlackGEM_tiling/: allskymap_basic.py  ranked_tiling.py
notebooks/: Testing_Modules.ipynb  allskymap_basic.py
tools/: driver.py  preComputeBGTile.py  preComputeBGTile_ray_optimized.py  raypid_tile_precompute.py
