[bdist_wheel]
universal = 1

[coverage:run]
source = BlackGEM_tiling
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = BlackGEM_tiling
version = 0.0.1
license = GPL-2+
author = Shaon Ghosh
author_email = shaonghosh@gmail.com
description = Tiling code for BlackGEM telescope array
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
;     Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    numpy
    astropy
    healpy
    pandas
    matplotlib
    pyproj
    ray
